[package]
simconnect = "0.1.3"
name = "better-radio-panel"
version = "0.0.1"
authors = ["Tom Langwaldt"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "1.2.5"
simconnect = "0.1.3"
parse_int = "0.6.0"

[profile.release]
panic = 'abort'
